# AdventOfCode

./: .gitignore  Cargo.toml  README.md  create.ps1  ctest.ps1
AoC2015/: CMakeLists.txt  README.md  main.cpp
AoC2015/aoc/: BaseDay.cpp  BaseDay.h  helper.cpp  helper.h
AoC2015/aoc/day01/: Day01.cpp  Day01.h
AoC2015/aoc/day02/: Day02.cpp  Day02.h
AoC2015/aoc/day03/: Day03.cpp  Day03.h
AoC2015/aoc/day05/: Day05.cpp  Day05.h
AoC2015/aoc/day06/: Day06.cpp  Day06.h
AoC2015/aoc/day07/: Day07.cpp  Day07.h
AoC2015/aoc/day08/: Day08.cpp  Day08.h
AoC2020/: README.md
AoC2020/AoC2020/: AoC2020.csproj  Program.cs
AoC2020/AoC2020/Inputs/: 03.txt  04.txt  06.txt  08.txt  11.txt  12.txt  14.txt  15.txt  21.txt  22.txt
AoC2020/AoC2020/RevisedSolutions/: Day09Revised.cs
AoC2020/AoC2020/Solutions/: Day01.cs  Day02.cs  Day03.cs  Day09.cs  Day12.cs  Day14.cs  Day20.cs  (+3 more)
aoc2017/: aoc2017.cabal  package.yaml
aoc_2018/: Cargo.toml  README.md
aoc_2018/scratch/: README.md  day08.js  day09.js
aoc_2018/src/: main.rs
aoc_2019/: README.md
aoc_2019/src/: intcode.rs  main.rs
aoc_2021/: Cargo.toml  README.md
aoc_2021/src/: main.rs  run.rs
aoc_2021/template/: day.txt
aoc_2022/: Cargo.toml  create.ps1  ctest.ps1  run.ps1
aoc_2022/src/: helper.rs  main.rs  run.rs
crates/aoc_2022/: Cargo.toml
csharp/AoC2020/: .gitignore  AoC2020.sln  README.md
rust/: create.ps1  ctest.ps1  run.ps1
rust/aoc2019/: Cargo.toml  README.md
rust/aoc2021/: Cargo.toml
rust/aoc2022/: Cargo.toml
rust/aoc2023/: Cargo.toml
rust/aoc2024/: Cargo.toml
rust/common/: Cargo.toml
(+283 files in other folders)
